6415 sockets created via t_open/t_bind not shown by pfiles 6432 TLI sockets aren't detected correctly by pfiles in a NGZ Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Mohamed A. Khalfella <khalfella@gmail.com> Approved by: Matthew Ahrens <mahrens@delphix.com>